--- a/src/Styles/index.scss
+++ b/src/Styles/index.scss
@@ -190,4 +190,109 @@ body {
       }
     }
   }
+
+  
+  
+}
+
+
+//Movie Page
+
+.moviePage {
+  min-height: 100vh;
+  background-size: cover;
+  background-position: top center;
+  position: relative;
+  &:after {
+    content: "";
+    display: block;
+    position: absolute;
+    inset: 0;
+    background: rgb(49, 47, 56);
+    background: linear-gradient(
+      0deg,
+      rgba(49, 47, 56, 1) 50%,
+      rgba(49, 47, 56, 0.5) 95%
+    );
+  }
+  .movieContent {
+    position: relative;
+    z-index: 10;
+    display: grid;
+    grid-template-columns: 2fr 5fr;
+    gap: 30px;
+    padding-top: 33vh;
+    .moviePoster {
+      img {
+        @include rounded;
+      }
+    }
+    .movieInfo {
+      padding: 30px 0px;
+      .movieTitle {
+        padding-bottom: 30px;
+        border-bottom: 1px solid $stone700;
+        h1 {
+          @include fluidType;
+          color: $stone100;
+          line-height: 1;
+          margin-bottom: 10px;
+        }
+        h3 {
+          font-weight: normal;
+        }
+      }
+      .moviePlot {
+        padding: 30px 0px;
+      }
+      .movieDetails {
+        .movieDetailsItem {
+          display: grid;
+          grid-template-columns: 1fr 4fr;
+          border-bottom: 1px solid $stone700;
+          padding: 10px 0px;
+          align-items: center;
+          grid-gap: 10px;
+          h3 {
+            color: $stone100;
+          }
+          span {
+            margin: 0px 10px 0px 0px;
+          }
+        }
+      }
+    }
+  }
+}
+.notFound {
+  padding: 50px 0px;
+  text-align: center;
+  h1 {
+    margin-bottom: 20px;
+    color: $stone100;
+    @include fluidType;
+  }
+  button {
+    background: $amber;
+    padding: 5px 15px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .appHeader {
+    @include flexbox(column, stretch, center, 10px);
+    .siteHeader {
+      @include flexbox(row, stretch, space-between, 20px);
+    }
+  }
+  .searchBox {
+    max-width: 600px;
+  }
+  .moviePage .movieContent {
+    padding-top: 30px;
+    grid-template-columns: 1fr;
+  }
 }
